# ai-tinkerer-lausanne

./: .env.example  LICENSE  README.md  pyproject.toml
notebooks/: 001_mcpadapt.ipynb
