[project]
name = "ai-tinkerer-lausanne"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcpadapt[crewai,smolagents]>=0.1.10",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "mypy>=1.16.0",
    "pytest>=8.4.0",
    "ruff>=0.11.13",
]
